Add unit test - update doc
